--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ myapi.key
 xv6.out*
 .vagrant/
 submissions/
+01translate/
+02xv6-chinese/
+03lecture-note/
+gdb-11.2/
+gradelib.pyc
+nano.save
+time.txt
